--- a/plugin.xml
+++ b/plugin.xml
@@ -121,7 +121,14 @@
         </config-file>
 
 
-        <lib-file src="src/android/libs/jverification-android-release-2.3.2.jar" />
+
+        <resource-file src="src/android/libs/arm64-v8a/libCtaApiLib.so" target="jniLibs/arm64-v8a/libCtaApiLib.so"/>
+        <resource-file src="src/android/libs/armeabi/libCtaApiLib.so" target="jniLibs/armeabi/libCtaApiLib.so"/>
+        <resource-file src="src/android/libs/armeabi-v7a/libCtaApiLib.so" target="jniLibs/armeabi-v7a/libCtaApiLib.so"/>
+        <resource-file src="src/android/libs/x86/libCtaApiLib.so" target="jniLibs/x86/libCtaApiLib.so"/>
+        <resource-file src="src/android/libs/x86_64/libCtaApiLib.so" target="jniLibs/x86_64/libCtaApiLib.so"/>
+
+        <lib-file src="src/android/libs/jverification-android-release-2.5.0.jar" />
         <source-file src="src/android/cn/jiguang/cordova/verification/JVerificationPlugin.java"
             target-dir="src/cn/jiguang/cordova/verification/" />
             
