--- a/plugin.xml
+++ b/plugin.xml
@@ -98,21 +98,29 @@
 
             <!-- since 2.0.0 optional 可选项，使用一键登录功能必须添加  -->
             <!-- since 2.1.1 optional 可选项，通过screenOrientation设置授权页面横竖屏展示  -->
-            <activity android:name="com.cmic.sso.sdk.activity.OAuthActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:launchMode="singleTop" android:screenOrientation="portrait"></activity>
+            <activity
+                    android:name="com.cmic.sso.sdk.activity.OAuthActivity"
+                    android:configChanges="orientation|keyboardHidden|screenSize"
+                    android:screenOrientation="unspecified"
+                    android:launchMode="singleTop">
+            </activity>
             <!-- since 2.0.0 optional 可选项，使用一键登录功能必须添加  -->
             <!-- since 2.1.1 optional 可选项，通过screenOrientation设置授权页面横竖屏展示  -->
-            <activity android:name="com.cmic.sso.sdk.activity.LoginAuthActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:launchMode="singleTop"
-                android:screenOrientation="portrait" android:theme="@android:style/Theme.Holo.NoActionBar"></activity>
+            <activity
+                    android:name="com.cmic.sso.sdk.activity.LoginAuthActivity"
+                    android:theme="@style/ActivityDialogStyle"
+                    android:configChanges="orientation|keyboardHidden|screenSize"
+                    android:screenOrientation="unspecified"
+                    android:launchMode="singleTop">
+            </activity>
             <!-- since 2.0.0 optional 可选项，使用一键登录功能必须添加  -->
             <!-- since 2.1.1 optional 可选项，通过screenOrientation设置授权页面横竖屏展示  -->
             <activity android:name="cn.jiguang.verifysdk.CtLoginActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:launchMode="singleTop"
-                android:screenOrientation="portrait" android:theme="@android:style/Theme.Holo.NoActionBar"></activity>
+                      android:configChanges="orientation|keyboardHidden|screenSize"
+                      android:theme="@style/ActivityDialogStyle"
+                      android:screenOrientation="unspecified"
+                      android:launchMode="singleTop">
+            </activity>
 
             <!-- Required -->
             <meta-data android:name="JPUSH_APPKEY" android:value="$APP_KEY" />
@@ -120,7 +128,22 @@
 
         </config-file>
 
+        <config-file parent="/resources" target="res/values/styles.xml">
+            <!-- Base application theme. -->
+            <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+                <!-- Customize your theme here. -->
+            </style>
 
+            <style name="ActivityDialogStyle">
+                <!--去掉action bar和标题栏-->
+                <item name="android:windowActionBar">false</item>
+                <item name="android:windowNoTitle">true</item>
+                <!--背景透明-->
+                <item name="android:windowIsTranslucent">true</item>
+                <!--dialog圆角-->
+                <item name="android:windowBackground">@drawable/dialog_bg</item>
+            </style>
+        </config-file>
 
         <resource-file src="src/android/libs/arm64-v8a/libCtaApiLib.so" target="jniLibs/arm64-v8a/libCtaApiLib.so"/>
         <resource-file src="src/android/libs/armeabi/libCtaApiLib.so" target="jniLibs/armeabi/libCtaApiLib.so"/>
@@ -134,6 +157,7 @@
             
         <resource-file src="src/android/res/anim/umcsdk_anim_loading.xml"  target="res/anim/umcsdk_anim_loading.xml"/>
 
+        <resource-file src="src/android/res/drawable/dialog_bg.xml"  target="res/drawable/dialog_bg.xml"/>
         <resource-file src="src/android/res/drawable/umcsdk_get_smscode_btn_bg.xml"  target="res/drawable/umcsdk_get_smscode_btn_bg.xml"/>
         <resource-file src="src/android/res/drawable/umcsdk_login_btn_bg.xml"  target="res/drawable/umcsdk_login_btn_bg.xml"/>
 
