--- a/plugin.xml
+++ b/plugin.xml
@@ -27,13 +27,14 @@
         <header-file src="src/ios/JVERIFICATIONService.h"/>
         <header-file src="src/ios/JVerificationPlugin.h"/>
         <source-file src="src/ios/JVerificationPlugin.m"/>
-        <source-file src="src/ios/jverification-ios-2.5.2.a" framework="true" />
+        <source-file src="src/ios/jverification-ios-2.6.2.a" framework="true" />
 
         <resource-file src="src/ios/JVerificationConfig.plist" />
         <resource-file src="src/ios/JVerificationResource.bundle" />
 
         <framework src="src/ios/TYRZSDK.framework" custom="true" />
         <framework src="src/ios/EAccountApiSDK.framework" custom="true" />
+        <framework src="src/ios/OAuth.framework" custom="true" />
         <framework src="src/ios/account_verify_sdk_core.framework" custom="true" />
         <framework src="src/ios/account_login_sdk_noui_core.framework" custom="true" />
 
@@ -50,6 +51,7 @@
         <framework src="TYRZSDK.framework" weak="true" />
         <framework src="account_login_sdk_noui_core.framework" weak="true" />
         <framework src="EAccountApiSDK.framework" weak="true" />
+        <framework src="OAuth.framework" weak="true" />
 
         <framework src="libresolv.tbd" />
         <framework src="libz.tbd" />
