--- a/plugin.xml
+++ b/plugin.xml
@@ -48,6 +48,7 @@
         <framework src="CoreGraphics.framework" weak="true" />
         <framework src="MobileCoreServices.framework" weak="true" />
         <framework src="account_verify_sdk_core.framework" weak="true" />
+        <framework src="AVFoundation.framework" weak="true" />
         <framework src="TYRZSDK.framework" weak="true" />
         <framework src="account_login_sdk_noui_core.framework" weak="true" />
         <framework src="EAccountApiSDK.framework" weak="true" />
