--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin xmlns:android="http://schemas.android.com/apk/res/android"
-    id="jiguang-jverification-cordova-plugin" version="1.3.2"
+    id="jgnpmjs-jverification-cordova-plugin" version="1.3.2"
     xmlns="http://apache.org/cordova/ns/plugins/1.0">
-    <name>JVerification-cordova-plugin</name>
+    <name>@jgnpmjs-JVerification-cordova-plugin</name>
 
     <!-- dependencies -->
     <dependency id="cordova-plugin-device" />
@@ -12,15 +12,15 @@
     <preference name="CHANNEL" default="developer-default" />
 
 
-    <js-module name="JGJVerificationPlugin" src="www/JG-JVerification-cordova-plugin.js">
-        <clobbers target="JGJVerificationPlugin" />
+    <js-module name="JGNpmVerificationPlugin" src="www/Jiguang-JVerification-cordova-plugin.js">
+        <clobbers target="JGNpmVerificationPlugin" />
     </js-module>
 
 
 <platform name="ios">
         <config-file target="config.xml" parent="/*">
-            <feature name="JGJVerificationPlugin">
-                <param name="ios-package" value="JVerificationPlugin"/>
+            <feature name="JGNpmVerificationPlugin">
+                <param name="ios-package" value="JGNpmVerificationPlugin"/>
             </feature>
         </config-file>
 
@@ -70,9 +70,9 @@
 
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
-            <feature name="JGJVerificationPlugin">
+            <feature name="JGNpmVerificationPlugin">
                 <param name="android-package"
-                    value="cn.jiguang.cordova.verification.JVerificationPlugin" />
+                    value="cn.jiguang.cordova.verification.JGNpmVerificationPlugin" />
             </feature>
         </config-file>
 
