--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin xmlns:android="http://schemas.android.com/apk/res/android"
-    id="jgnpmjs-jverification-cordova-plugin" version="1.3.3"
+    id="jgnpm-jverification-cordova-plugin" version="1.3.4"
     xmlns="http://apache.org/cordova/ns/plugins/1.0">
-    <name>@jgnpmjs-JVerification-cordova-plugin</name>
+    <name>@jgnpm-JVerification-cordova-plugin</name>
 
     <!-- dependencies -->
     <dependency id="cordova-plugin-device" />
@@ -12,7 +12,7 @@
     <preference name="CHANNEL" default="developer-default" />
 
 
-    <js-module name="JGJVerificationPlugin" src="www/jgnpmjs-JVerification-cordova-plugin.js">
+    <js-module name="JGJVerificationPlugin" src="www/jgnpm-JVerification-cordova-plugin.js">
         <clobbers target="JGJVerificationPlugin" />
     </js-module>
 
@@ -72,7 +72,7 @@
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="JGJVerificationPlugin">
                 <param name="android-package"
-                    value="cn.jiguang.cordova.verification.JGNpmVerificationPlugin" />
+                    value="cn.jiguang.cordova.verification.JGJVerificationPlugin" />
             </feature>
         </config-file>
 
