--- a/jverification_cordova_demo/package.json
+++ b/jverification_cordova_demo/package.json
@@ -17,7 +17,7 @@
     "cordova-ios": "^6.2.0",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-jcore": "^1.4.1",
-    "jgnpm-jverification-cordova-plugin": "github:jpush/JVerification-cordova-plugin"
+    "jgnpm-jverification-cordova-plugin": "^1.3.5"
   },
   "cordova": {
     "platforms": [
@@ -26,8 +26,7 @@
     ],
     "plugins": {
       "jgnpm-jverification-cordova-plugin": {
-        "APP_KEY": "59705dfaf33d8f339047b670",
-        "CHANNEL": "developer-default"
+        "APP_KEY": "bbd30f38e858211953e84a4a"
       }
     }
   }
