--- a/jverification_cordova_demo/package.json
+++ b/jverification_cordova_demo/package.json
@@ -17,7 +17,7 @@
     "cordova-ios": "^6.2.0",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-jcore": "^1.4.1",
-    "jgnpm-jverification-cordova-plugin": "^1.3.6"
+    "jgnpm-jverification-cordova-plugin": "^1.3.7"
   },
   "cordova": {
     "platforms": [
@@ -26,7 +26,8 @@
     ],
     "plugins": {
       "jgnpm-jverification-cordova-plugin": {
-        "APP_KEY": "bbd30f38e858211953e84a4a"
+        "APP_KEY": "bbd30f38e858211953e84a4a",
+        "CHANNEL": "developer-default"
       }
     }
   }
