--- a/jverification_cordova_demo/package.json
+++ b/jverification_cordova_demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.jiguang.prliu",
+  "name": "com.jiguang.auth",
   "displayName": "HelloCordova",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
@@ -16,8 +16,8 @@
     "cordova-android": "^10.1.2",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-device": "^2.1.0",
-    "cordova-plugin-jcore": "^1.4.1",
-    "jgnpmplus-jverification-cordova-plugin": "^2.0.1"
+    "cordova-plugin-jcore": "^1.4.4",
+    "jgnpmplus-jverification-cordova-plugin": "^2.0.5"
   },
   "cordova": {
     "platforms": [
@@ -26,7 +26,7 @@
     ],
     "plugins": {
       "jgnpmplus-jverification-cordova-plugin": {
-        "APP_KEY": "bbd30f38e858211953e84a4a",
+        "APP_KEY": "1b5965ba23557bcf384e0b08",
         "CHANNEL": "developer-default"
       }
     }
