--- a/jverification_cordova_demo/package.json
+++ b/jverification_cordova_demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pub.kilo.demo",
+  "name": "cn.jiguang.auth",
   "displayName": "HelloCordova",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
@@ -17,7 +17,7 @@
     "cordova-ios": "^6.2.0",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-jcore": "^1.4.4",
-    "jgnpmplus-jverification-cordova-plugin": "^2.0.9"
+    "jgnpmplus-jverification-cordova-plugin": "^2.1.0"
   },
   "cordova": {
     "platforms": [
@@ -26,7 +26,7 @@
     ],
     "plugins": {
       "jgnpmplus-jverification-cordova-plugin": {
-        "APP_KEY": "41f3e34b401752a63dbc27cc",
+        "APP_KEY": "1b5965ba23557bcf384e0b08",
         "CHANNEL": "developer-default"
       }
     }
